--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,10 @@
 {
   "name": "Quick Actions",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "Adds an extensible tab to the 'User Settings' context menu that enables Powercord shortcuts.",
   "author": "Harley#1051",
-  "license": "MIT"
+  "license": "MIT",
+  "permissions": [
+    "ext_api"
+  ]
 }
